--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!--<link rel="apple-touch-icon" href=".png" />-->
   <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
 
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="./style.css"/>
 
 </head>
 <body>
@@ -50,10 +50,10 @@
 </script>
 
 <!-- Polyfills bundle. -->
-<script src="src/polyfills.bundle.js" charset="utf-8"> </script>
+<script src="./src/polyfills.bundle.js" charset="utf-8"> </script>
 
 <!-- SystemJS support. -->
-<script src="src/system.bundle.js" charset="utf-8"> </script>
+<script src="./src/system.bundle.js" charset="utf-8"> </script>
 
 <!-- Import map -->
 <script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
