--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <script src="./src/system.bundle.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="./src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
     System.import('./index.js').catch(function(err) { console.error(err); })
