--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script src="./src/polyfills.bundle.js" charset="utf-8"> </script>
 
 <!-- SystemJS support. -->
-<script src="./src/system.bundle.js" charset="utf-8"> </script>
+<script src="src/system.bundle.js" charset="utf-8"> </script>
 
 <!-- Import map -->
 <script src="./src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
