--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
       </div>
     </div>
   
-<script src="./vconsole.min.js"></script>
+<script src="vconsole.min.js"></script>
 <script type="text/javascript">
     // open web debugger console
     window.VConsole && (window.vConsole = new VConsole());
 </script>
 
 <!-- Polyfills bundle. -->
-<script src="./src/polyfills.bundle.js" charset="utf-8"> </script>
+<script src="src/polyfills.bundle.js" charset="utf-8"> </script>
 
 <!-- SystemJS support. -->
 <script src="src/system.bundle.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="./src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
     System.import('./index.js').catch(function(err) { console.error(err); })
